--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="layihe.css">    
+    <link rel="stylesheet" href="./style.css">    
 </head>
 <body>
     <div class="todo-container">
@@ -29,6 +29,6 @@
         </div>
     </div>
     </div>
-    <script src="layihe.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
